# dissipationtheory

./: .gitignore  CHANGELOG.md  LICENSE  README.html  README.md  dissipation-theory--Study-11.html  dissipation-theory--Study-4.html  dissipation-theory--Study-5.html  pyproject.toml
development/: 2023-09-06--jam99--ThetaI-rewrite.nb  2023-09-23--jam99--ThetaI-rewrite-v2.nb  2023-09-25--jam99--Bessel-function-derivatives.nb  2023-09-26--jam99--gamma-perp-expansion.nb  2023-09-27--jam99--gamma-perp-high-density-approx.nb  2023-10-02--jam99--Unitless-correlation-function-integral.nb  20230811-ringdown-Gold_data_summary.csv  2024-05-28--jam99--Unitless-correlation-function-integral-revisited.nb  2024-05-29--jam99--Correlation-function-integrals-revisited.nb  2024-05-30--jam99--Low-frequency-expansion.nb  2024-06-03--jam99--Loring-LDS-signal.nb  2024-06-04--jam99--Loring-BLDS-AM-signal.nb  2024-06-18--jam99--Workup--BLDS-BAPbI3-A-90nm.ipynb  2024-10-15--jam99--dissipation-theory--Study-28.nb  2024-11-19--jam99--Response-function-derivatives.nb  2025-06-06--jam99--ThetaI-rewrite-v3.nb  2025-06-11--jam99--Complex-inverse-matrix-D-Im-order.nb  2025-06-22--jam99--Kn-for-metal-via-image-charges.nb  2025-06-28--jam99--Bessel-function-Fourier-transform.nb  2025-08-02--jam99--BLDS-AM-case-integrals.nb  Lekkala2013--Fig7b--1.5e-01.csv  Lekkala2013--Fig7b--2.7e-10.csv  Lekkala2013--Fig7b--4.0e-07.csv  Lekkala2013--Fig7b--6.0e-14.csv  Lekkala2013--Fig9b--0.000.csv  Lekkala2013--Fig9b--0.005.csv  Lekkala2013--Fig9b--0.050.csv  Lekkala2013--Fig9b--0.100.csv  Lekkala2013--Fig9b--0.500.csv  Xu2019oct--Fig-3--metal.csv  dissipation-theory--Study-1.html  dissipation-theory--Study-1.ipynb  dissipation-theory--Study-10--obsolete.html  dissipation-theory--Study-10.html  dissipation-theory--Study-10.ipynb  dissipation-theory--Study-11.html  dissipation-theory--Study-11.ipynb  dissipation-theory--Study-12.html  dissipation-theory--Study-12.ipynb  dissipation-theory--Study-13.html  (+152 more)
dissipationtheory/: __init__.py  capacitance.py  capacitancefinite.py  constants.py  data.py  data2.py  dissipation.py  dissipation10e.py  dissipation11e.py  dissipation12e.py  dissipation13e.py  dissipation14e.py  dissipation15e.py  dissipation16e.py  dissipation17e.py  dissipation18e.py  dissipation19e.py  dissipation2.py  dissipation3.py  dissipation4.py  dissipation5.py  dissipation6.py  dissipation7.py  dissipation8a.py  dissipation8b.py  dissipation8c.py  dissipation9a.py  dissipation9b.py  dissipation9c.py  dissipation9d.py  dissipation9e.py  lister.py
docs/source/: conf.py  dissipation.rst  index.rst  unittest.rst
tests/: blds.py  blds_fast.py  low_density_friction_parallel.py  low_density_friction_perpendicular.py  test_capacitance.py  test_constants.py  test_dissipation.py  test_dissipation11e.py  test_dissipation12e.py  test_dissipation2.py  test_dissipation5.py  test_dissipation9a.py  test_dissipation9b.py
