[tool.poetry]
name = "dissipationtheory"
version = "0.1.0"
description = "Compute atomic force microscope cantilever dissipation and frequency noise over metals and dielectrics.  Compute cantilever capacitance using a sphere plus a cone model."
authors = ["John A. Marohn <jam99@cornell.edu>"]
license = "MIT License"
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.5.3"
numpy = "^1.18"
sympy = "^1.11.1"
matplotlib = "^3.7.1"
lmfit = "^1.2.0"
pytest = { version = ">=7.1.1", optional = true }
pytest-cov = { version = ">=3.0.0", optional = true }
tox = { version = ">=3.24.5", optional = true }
tox-conda = { version = ">=0.9.2", optional = true}
pint = "^0.20.1"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]


[tool.coverage.run]
# pytest coverage
source_pkgs = ['dissipationtheory']
omit = ['tests/*']


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, coverage
isolated_build = True


[testenv:py38]
deps =
    pytest >= 7.1.1
commands = pytest

[testenv:py39]
deps =
    pytest >= 7.1.1
commands = pytest
[testenv:py310]
deps =
    pytest >= 7.1.1
commands = pytest

[testenv:py311]
deps =
    pytest >= 7.1.1
commands = pytest


[testenv:coverage]
deps = 
    pytest >= 7.3.1
    pytest-cov >= 3.0.0
commands =
    coverage run --source=tests -m pytest
    coverage html
    coverage report

"""