[tool.poetry]
name = "dissipationtheory"
version = "1.0"
description = "Compute atomic force microscope cantilever dissipation and frequency noise over metals and dielectrics.  Compute cantilever capacitance using a sphere plus a cone model."
authors = ["John A. Marohn <jam99@cornell.edu>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.10.2"
pandas = "1.5.3"
numpy = "^1.24"
sympy = "^1.11.1"
matplotlib = "^3.7.1"
lmfit = "^1.2.0"
pytest = { version = ">=7.2.0", optional = true }
pytest-cov = { version = ">=3.0.0", optional = true }
tox = { version = ">=3.24.5", optional = true }
tox-conda = { version = ">=0.9.2", optional = true}
pint = ">=0.21"
jupyter = "^1.0.0"
tqdm = "^4.66"
numba = "^0.58"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
h5py = "^3.11.0"
freqdemod = {git = "https://github.com/JohnMarohn/FreqDemod.git"}
numba-scipy = "^0.4.0"
seaborn = "^0.13.2"
tables = "3.10"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "6.4.12"
traitlets = "5.9.0"
jupyter-nbextensions-configurator = "^0.6.4"
jupyter-server = "<2"
autopep8 = "^2.3.2"
torch = "^2.8.0"
multiprocess = "^0.70.18"

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "tox", "tox-conda"]

[tool.coverage.run]
# pytest coverage
source_pkgs = ['dissipationtheory']
omit = ['tests/*']

# This is to avoid
#  Users/jam99/Library/Caches/pypoetry/virtualenvs/dissipationtheory-Uvi85QQO-py3.9/lib/python3.9/site-packages/pint/facets/numpy/quantity.py:271: 
# DeprecationWarning: Conversion of an array with ndim > 0 to a 
# scalar is deprecated, and will error in future. Ensure you extract a single 
# element from your array before performing this operation. (Deprecated NumPy 
# 1.25.)
#    self._magnitude[key] = factor.magnitude
#
#
[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
# 
# Instead: $ poetry run pytest -W ignore::DeprecationWarning


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, coverage
isolated_build = True


[testenv:py38]
deps =
    pytest >= 7.1.1
commands = pytest

[testenv:py39]
deps =
    pytest >= 7.1.1
commands = pytest
[testenv:py310]
deps =
    pytest >= 7.1.1
commands = pytest

[testenv:py311]
deps =
    pytest >= 7.1.1
commands = pytest


[testenv:coverage]
deps = 
    pytest >= 7.3.1
    pytest-cov >= 3.0.0
commands =
    coverage run --source=tests -m pytest
    coverage html
    coverage report

"""